# PlaudClone

./: .gitignore  add_speaker_profile.py  chat_cli.py  check_files.py  check_transcripts.py  cuda_test.py  pyproject.toml  quick_check.py  requirements.txt  test.db  test_audio.py  test_auth.py  test_auth_full.py  test_base.py  test_cuda.py  test_db.py  test_db_content.py  test_diarization.py  test_full_pipeline.py  test_hf_auth.py  test_import.py  test_large_model.py  test_ollama.py  test_pipeline.py  test_profile_content.py  test_profiles.py  test_simple.py  test_speaker_identification.py  test_speaker_profiles.py  test_system.py  test_torch.py  test_transcription.py  test_whisper.py
src/: main.py
src/audio/: add_speaker_profile.py  diarizer.py  processor.py  speaker_identity.py  transcriber.py
src/chat/: __init__.py  chat_cli.py  transcript_query.py
src/database/: transcript_db.py
src/utils/: file_watcher.py
tests/: test_transcriber.py
