[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaudclone"
version = "0.1.0"
authors = [
    { name="Dana Bayatzadegan", email="your.email@example.com" },
]
description = "A local AI-powered audio transcription and analysis tool"
requires-python = ">=3.9"